adding filter by name, removing competence type
